--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css"
           integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
+    <script src="js/ApiService.js"></script>
     <script src="js/Task.js"></script>
     <script src="js/Operation.js"></script>
-    <script src="js/DomElements.js"></script>
     <script src="js/DomElements.js"></script>
     <script src="js/app.js"></script>
 </head>
