addEventToShowOperationsInTask not working

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <section>
     <div class="jumbotron container todo-app">
-        <form class="form-group" class="new-task">
+        <form class="form-group, new-task">
             <h2>Add new task</h2>
             <input type="text" class="form-control" name="title" placeholder="Title">
             <input type="text" class="form-control" name="description" placeholder="Description">
